# Metronome

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  QtMetronome.pro  README.md  Ticker.cpp  Ticker.h  Timer.cpp  Timer.h  main.cpp  resource.qrc
